feat: Add Google Maps quick navigation button to all timeline cards

--- a/day1.html
+++ b/day1.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">✈️ 14:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">✈️ 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E5%87%B1%E5%A4%AB%E6%8B%89%E7%B6%AD%E5%85%8B%E5%9C%8B%E9%9A%9B%E6%A9%9F%E5%A0%B4%20(KEF)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">抵達凱夫拉維克國際機場 (KEF)</div>
                 <div class="tl-desc">從台灣經轉機抵達冰島凱夫拉維克機場。通過海關後前往租車櫃台取車。</div>
                 <div class="tl-tags"><span class="tl-tag">✈️ 抵達</span><span class="tl-tag">🚗 取車</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 15:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 15:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%8F%96%E8%BB%8A%E8%88%87%E6%BA%96%E5%82%99%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">取車與準備</div>
                 <div class="tl-desc">取得租用的 4WD 車輛，檢查車況、保險文件。在機場旁超市 Nettó 購買首日補給品。</div>
                 <div class="tl-tags"><span class="tl-tag">🛒 採買</span><span class="tl-tag">⛽ 加油</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 16:30 – 17:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 16:30 – 17:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%E5%B8%82%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往雷克雅維克市區</div>
                 <div class="tl-desc">從 KEF 機場沿 41 號公路前往首都雷克雅維克，車程約 45 分鐘。沿途可見冰島特有的苔蘚熔岩地貌。</div>
                 <div class="tl-tags"><span class="tl-tag">🛤️ 公路</span><span class="tl-tag">🌋 熔岩地</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 17:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🏨 17:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%85%A5%E4%BD%8F%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">入住雷克雅維克住宿</div>
                 <div class="tl-desc">抵達市區住宿 Check-in，整理行李。初步熟悉周邊環境。</div>
                 <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
@@ -98,7 +110,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 18:30 – 21:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 18:30 – 21:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%B8%82%E5%8D%80%E6%BC%AB%E6%AD%A5%E8%88%87%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">市區漫步與晚餐</div>
                 <div class="tl-desc">漫步 Laugavegur 主街，感受首都氛圍。推薦品嘗冰島熱狗 Bæjarins Beztu Pylsur（柯林頓也吃過！），或在 Grillið 享用道地冰島料理。</div>
                 <div class="tl-tags"><span class="tl-tag">🌆 市區</span><span class="tl-tag">🌭 冰島熱狗</span><span class="tl-tag">🍽️ 晚餐</span></div>
