--- a/day10.html
+++ b/day10.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 09:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 09:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%98%BF%E5%85%8B%E9%9B%B7%E9%87%8C%E6%95%99%E5%A0%82%20Akureyrarkirkja%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">阿克雷里教堂 Akureyrarkirkja</div>
                 <div class="tl-desc">矗立在市中心山坡上的地標教堂，寬闊的階梯提供俯瞰峽灣的絕佳視角。</div>
                 <div class="tl-tags"><span class="tl-tag">⛪ 教堂</span><span class="tl-tag">📸 全景</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 10:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 10:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%98%BF%E5%85%8B%E9%9B%B7%E9%87%8C%E6%A4%8D%E7%89%A9%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">阿克雷里植物園</div>
                 <div class="tl-desc">世界最北的植物園之一（免費入場）。夏季繽紛花卉盛開，非常值得一逛。</div>
                 <div class="tl-tags"><span class="tl-tag">🌸 植物園</span><span class="tl-tag">🆓 免費</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 12:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 12:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%B8%82%E5%8D%80%E6%BC%AB%E6%AD%A5%E8%88%87%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">市區漫步與午餐</div>
                 <div class="tl-desc">逛 Hafnarstræti 主街的特色商店與咖啡廳。推薦 Brynja 冰淇淋（冰島人最愛的冰淇淋店）。</div>
                 <div class="tl-tags"><span class="tl-tag">🍦 冰淇淋</span><span class="tl-tag">🛍️ 購物</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 14:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Dalv%C3%ADk%20%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Dalvík 小鎮</div>
                 <div class="tl-desc">北上 20 分鐘到 Dalvík，可漫步海邊或參觀民俗博物館。</div>
                 <div class="tl-tags"><span class="tl-tag">🏘️ 漁村</span></div>
@@ -98,7 +110,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 16:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 16:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%87%AA%E7%94%B1%E6%B4%BB%E5%8B%95%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">自由活動</div>
                 <div class="tl-desc">回到阿克雷里市區自由活動。推薦到 Sjallinn 酒吧聽現場音樂，或在峽灣邊散步。</div>
                 <div class="tl-tags"><span class="tl-tag">🎵 音樂</span><span class="tl-tag">🚶 散步</span></div>
