--- a/day11.html
+++ b/day11.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 08:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 08:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%BA%E7%99%BC%E8%A5%BF%E8%A1%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">出發西行</div>
                 <div class="tl-desc">離開阿克雷里，沿一號公路前往西部。今天是較長的駕駛日。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 公路之旅</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 10:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 10:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Skagafj%C3%B6r%C3%B0ur%20%E9%A6%AC%E8%B0%B7%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Skagafjörður 馬谷</div>
                 <div class="tl-desc">冰島馬的故鄉！路邊可以看到大量矮壯可愛的冰島馬。可停下與馬群互動拍照（不要餵食）。</div>
                 <div class="tl-tags"><span class="tl-tag">🐴 冰島馬</span><span class="tl-tag">📸 互動</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 12:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 12:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Bl%C3%B6ndu%C3%B3s%20%E5%B0%8F%E9%8E%AE%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Blönduós 小鎮午餐</div>
                 <div class="tl-desc">西北部的小鎮，在此補給用餐與加油。</div>
                 <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span><span class="tl-tag">⛽ 加油</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 14:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E5%B8%83%E5%80%AB%E8%BF%AA%E6%AD%90%E6%96%AF%E8%87%B3%E6%96%AF%E5%A5%88%E5%B1%B1%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往布倫迪歐斯至斯奈山</div>
                 <div class="tl-desc">繼續西行，沿途經過寧靜的冰島鄉村風光。</div>
                 <div class="tl-tags"><span class="tl-tag">🛤️ 鄉村公路</span></div>
@@ -98,7 +110,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 17:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🏨 17:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%20Stykkish%C3%B3lmur%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">抵達 Stykkishólmur</div>
                 <div class="tl-desc">入住斯奈山半島北岸的小鎮，風景優美的漁港小鎮。</div>
                 <div class="tl-tags"><span class="tl-tag">🏨 住宿</span><span class="tl-tag">⚓ 漁港</span></div>
