--- a/day12.html
+++ b/day12.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 09:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%95%99%E6%9C%83%E5%B1%B1%20Kirkjufell%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">教會山 Kirkjufell</div>
                 <div class="tl-desc">冰島被拍攝最多的山！完美的箭頭形狀配上旁邊的 Kirkjufellsfoss 瀑布。權力遊戲的拍攝地。</div>
                 <div class="tl-tags"><span class="tl-tag">⛰️ 教會山</span><span class="tl-tag">🎬 權力遊戲</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 10:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 10:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Grundarfj%C3%B6r%C3%B0ur%20%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Grundarfjörður 小鎮</div>
                 <div class="tl-desc">教會山腳下的寧靜漁村。可在海邊咖啡廳歇腳。</div>
                 <div class="tl-tags"><span class="tl-tag">🏘️ 漁村</span><span class="tl-tag">☕ 咖啡</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 12:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 12:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%C3%93lafsv%C3%ADk%20%E8%88%87%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Ólafsvík 與午餐</div>
                 <div class="tl-desc">斯奈山北岸的另一個迷人漁村，有不錯的餐廳。</div>
                 <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 14:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Sv%C3%B6%C3%B0ufoss%20%E7%80%91%E5%B8%83%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Svöðufoss 瀑布</div>
                 <div class="tl-desc">較少人知道的美麗瀑布，背景是斯奈菲爾冰川。步行約 20 分鐘。</div>
                 <div class="tl-tags"><span class="tl-tag">🌊 瀑布</span><span class="tl-tag">🏔️ 冰川</span></div>
@@ -98,7 +110,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 16:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 16:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Stykkish%C3%B3lmur%20%E7%87%88%E5%A1%94%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Stykkishólmur 燈塔</div>
                 <div class="tl-desc">回到住宿小鎮，爬上 Súgandisey 島觀賞橘色燈塔與峽灣全景。日落時分特別美。</div>
                 <div class="tl-tags"><span class="tl-tag">🗼 燈塔</span><span class="tl-tag">🌅 日落</span></div>
