--- a/day13.html
+++ b/day13.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 09:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E6%96%AF%E5%A5%88%E5%B1%B1%E8%A5%BF%E6%AE%B5%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往斯奈山西段</div>
                 <div class="tl-desc">沿 54 號公路前往半島西端。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 10:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 10:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Dj%C3%BApal%C3%B3nssandur%20%E9%BB%91%E7%8F%8D%E7%8F%A0%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Djúpalónssandur 黑珍珠沙灘</div>
                 <div class="tl-desc">獨特的黑卵石沙灘，有四塊「力量石」供測試力氣（古代漁夫的面試工具）。背景是斯奈菲爾冰川。</div>
                 <div class="tl-tags"><span class="tl-tag">🏖️ 黑珍珠沙灘</span><span class="tl-tag">💪 力量石</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 11:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 11:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=L%C3%B3ndrangar%20%E7%8E%84%E6%AD%A6%E5%B2%A9%E9%9B%99%E5%A1%94%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Lóndrangar 玄武岩雙塔</div>
                 <div class="tl-desc">兩座聳立的火山岩柱，高 75 與 61 公尺。步道輕鬆，風景壯麗。</div>
                 <div class="tl-tags"><span class="tl-tag">🗿 岩柱</span><span class="tl-tag">📸 風景</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 13:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 13:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Arnarstapi%20%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Arnarstapi 小鎮</div>
                 <div class="tl-desc">海岸步道連接 Arnarstapi 與 Hellnar，沿途可見海蝕門、懸崖鳥巢。午餐在 Hellnar 咖啡廳。</div>
                 <div class="tl-tags"><span class="tl-tag">🥾 海岸步道</span><span class="tl-tag">🍽️ 午餐</span></div>
@@ -98,7 +110,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 15:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Vatnshellir%20%E7%81%AB%E5%B1%B1%E7%86%94%E5%B2%A9%E6%B4%9E%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Vatnshellir 火山熔岩洞</div>
                 <div class="tl-desc">8000 年前形成的地下熔岩洞穴。導覽約 45 分鐘，需預約。地下世界超酷！</div>
                 <div class="tl-tags"><span class="tl-tag">🕳️ 熔岩洞</span><span class="tl-tag">🔦 探險</span></div>
@@ -111,7 +126,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 17:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 17:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">返回雷克雅維克</div>
                 <div class="tl-desc">結束斯奈山之旅，沿一號公路返回雷克雅維克，車程約 2.5 小時。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 返程</span></div>
