--- a/day14.html
+++ b/day14.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 09:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 09:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%93%88%E7%88%BE%E6%A0%BC%E6%9E%97%E5%A7%86%E6%95%99%E5%A0%82%20Hallgr%C3%ADmskirkja%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">哈爾格林姆教堂 Hallgrímskirkja</div>
                 <div class="tl-desc">雷克雅維克地標！搭電梯到 73 公尺高的塔頂，360 度俯瞰整座城市與遠方的山脈。</div>
                 <div class="tl-tags"><span class="tl-tag">⛪ 地標教堂</span><span class="tl-tag">🏙️ 全景</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 10:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 10:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%BD%A9%E8%99%B9%E8%A1%97%20Sk%C3%B3lav%C3%B6r%C3%B0ust%C3%ADgur%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">彩虹街 Skólavörðustígur</div>
                 <div class="tl-desc">從教堂延伸而下的彩虹步道，兩旁是特色商店與藝廊。</div>
                 <div class="tl-tags"><span class="tl-tag">🌈 彩虹街</span><span class="tl-tag">🛍️ 購物</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 11:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 11:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%93%88%E5%B8%95%E9%9F%B3%E6%A8%82%E5%BB%B3%20Harpa%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">哈帕音樂廳 Harpa</div>
                 <div class="tl-desc">海港邊的建築傑作，幾何玻璃幕牆隨光影變化。內部免費參觀。</div>
                 <div class="tl-tags"><span class="tl-tag">🎵 音樂廳</span><span class="tl-tag">📐 建築</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍽️ 12:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🍽️ 12:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Old%20Harbour%20%E6%B8%AF%E5%8F%A3%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Old Harbour 港口午餐</div>
                 <div class="tl-desc">在舊港口享用海鮮。推薦 Sea Baron 的龍蝦湯與鯨魚串。</div>
                 <div class="tl-tags"><span class="tl-tag">🍽️ 海鮮</span><span class="tl-tag">🦞 龍蝦湯</span></div>
@@ -98,7 +110,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 14:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Sun%20Voyager%20%E9%9B%95%E5%A1%91%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Sun Voyager 雕塑</div>
                 <div class="tl-desc">海邊的維京船骨架不鏽鋼雕塑，是城市最知名的拍照點。背景是 Esja 山。</div>
                 <div class="tl-tags"><span class="tl-tag">⛵ 太陽航行者</span><span class="tl-tag">📸 地標</span></div>
@@ -111,7 +126,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 15:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%9C%8B%E5%AE%B6%E5%8D%9A%E7%89%A9%E9%A4%A8%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">國家博物館</div>
                 <div class="tl-desc">了解冰島從維京定居到現代的歷史。互動展覽非常精彩。</div>
                 <div class="tl-tags"><span class="tl-tag">🏛️ 博物館</span><span class="tl-tag">📖 歷史</span></div>
@@ -124,7 +142,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍽️ 19:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🍽️ 19:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%91%8A%E5%88%A5%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">告別晚餐</div>
                 <div class="tl-desc">在 Grillið 或 Dill（冰島唯一的米其林星級餐廳）享用精緻晚餐。</div>
                 <div class="tl-tags"><span class="tl-tag">🌟 米其林</span><span class="tl-tag">🍽️ 晚餐</span></div>
