--- a/day15.html
+++ b/day15.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 09:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%9C%80%E5%BE%8C%E7%9A%84%E5%B8%82%E5%8D%80%E8%B3%BC%E7%89%A9%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">最後的市區購物</div>
                 <div class="tl-desc">在 Laugavegur 購買最後的紀念品。推薦：冰島羊毛衣 Lopapeysa、熔岩鹽、Omnom 巧克力。</div>
                 <div class="tl-tags"><span class="tl-tag">🛍️ 紀念品</span><span class="tl-tag">🧶 羊毛衣</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 12:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 12:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E8%97%8D%E6%B9%96%20Blue%20Lagoon%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往藍湖 Blue Lagoon</div>
                 <div class="tl-desc">冰島最著名的溫泉！乳藍色的地熱溫泉水，富含矽和礦物質。門票需提前預訂！</div>
                 <div class="tl-tags"><span class="tl-tag">💎 藍湖</span><span class="tl-tag">♨️ 溫泉</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">♨️ 13:00 – 16:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">♨️ 13:00 – 16:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%97%8D%E6%B9%96%E6%B3%A1%E6%BA%AB%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">藍湖泡溫泉</div>
                 <div class="tl-desc">在 38-39°C 的溫泉中放鬆。可體驗矽泥面膜（含在門票中）。Premium 票含飲料與浴袍。</div>
                 <div class="tl-tags"><span class="tl-tag">♨️ 溫泉</span><span class="tl-tag">💆 矽泥面膜</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍽️ 16:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🍽️ 16:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%97%8D%E6%B9%96%20Lava%20%E9%A4%90%E5%BB%B3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">藍湖 Lava 餐廳</div>
                 <div class="tl-desc">在藍湖旁的 Lava 餐廳享用精緻冰島料理，透過落地窗欣賞藍湖蒸氣風景。</div>
                 <div class="tl-tags"><span class="tl-tag">🍽️ 精緻料理</span></div>
@@ -98,7 +110,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 18:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 18:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">返回雷克雅維克</div>
                 <div class="tl-desc">從藍湖回到市區，約 50 分鐘車程。最後一晚的自由時光。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 返程</span></div>
