--- a/day16.html
+++ b/day16.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 08:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🏨 08:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Check-out%20%E8%88%87%E6%9C%80%E5%BE%8C%E6%95%B4%E7%90%86%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Check-out 與最後整理</div>
                 <div class="tl-desc">退房，最後檢查是否遺漏物品。將租車油箱加滿。</div>
                 <div class="tl-tags"><span class="tl-tag">🏨 退房</span><span class="tl-tag">⛽ 加油</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 09:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%AD%B8%E9%82%84%E7%A7%9F%E8%BB%8A%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">歸還租車</div>
                 <div class="tl-desc">前往 KEF 機場附近歸還租車。檢查車輛狀況，辦理還車手續。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 還車</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🛫 10:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🛫 10:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%A9%9F%E5%A0%B4%E5%A0%B1%E5%88%B0%E8%88%87%E5%85%8D%E7%A8%85%E5%BA%97%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">機場報到與免稅店</div>
                 <div class="tl-desc">辦理登機手續。逛 KEF 免稅店，最後機會買 Duty Free 的酒類與巧克力（冰島境內酒類很貴，機場免稅店是最後機會）。</div>
                 <div class="tl-tags"><span class="tl-tag">✈️ 報到</span><span class="tl-tag">🛍️ 免稅店</span></div>
@@ -85,7 +94,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">✈️ 13:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">✈️ 13:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%B5%B7%E9%A3%9B%E5%9B%9E%E5%AE%B6%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">起飛回家</div>
                 <div class="tl-desc">帶著滿滿的回憶離開冰島。再見了，這片冰與火之地！🇮🇸</div>
                 <div class="tl-tags"><span class="tl-tag">✈️ 返程</span><span class="tl-tag">👋 再見冰島</span></div>
