--- a/day2.html
+++ b/day2.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 09:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%BA%E7%99%BC%E5%89%8D%E5%BE%80%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">出發前往辛格維利爾國家公園</div>
                 <div class="tl-desc">從雷克雅維克出發，約 45 分鐘車程抵達世界遺產辛格維利爾。這裡是歐亞板塊與北美板塊交界處，也是冰島議會的誕生地（西元 930 年）。</div>
                 <div class="tl-tags"><span class="tl-tag">🏛️ 世界遺產</span><span class="tl-tag">🌍 板塊裂縫</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 10:00 – 12:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 10:00 – 12:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8E%A2%E7%B4%A2%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">探索辛格維利爾</div>
                 <div class="tl-desc">沿步道穿越 Almannagjá 裂縫，觀賞 Öxarárfoss 瀑布。若有預約可體驗 Silfra 浮潛（世界最清澈的水域之一）。</div>
                 <div class="tl-tags"><span class="tl-tag">🥾 健行</span><span class="tl-tag">💧 Silfra</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 12:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 12:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Geysir%20%E9%96%93%E6%AD%87%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往 Geysir 間歇泉</div>
                 <div class="tl-desc">車程約 50 分鐘。抵達後在附近餐廳午餐。</div>
                 <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 13:30 – 14:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 13:30 – 14:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Geysir%20%E9%96%93%E6%AD%87%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Geysir 間歇泉</div>
                 <div class="tl-desc">觀賞 Strokkur 間歇泉每 5-8 分鐘噴發一次（高達 20-30 公尺）。周圍還有彩色溫泉池。</div>
                 <div class="tl-tags"><span class="tl-tag">⛲ 間歇泉</span><span class="tl-tag">📸 打卡</span></div>
@@ -98,7 +110,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 15:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%BB%83%E9%87%91%E7%80%91%E5%B8%83%20Gullfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">黃金瀑布 Gullfoss</div>
                 <div class="tl-desc">冰島最著名的瀑布之一，雙層階梯式瀑布直墜 32 公尺深的峽谷。有上層與下層觀景台。霧氣瀰漫時可能看見彩虹！</div>
                 <div class="tl-tags"><span class="tl-tag">🌊 瀑布</span><span class="tl-tag">🌈 彩虹</span></div>
@@ -111,7 +126,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 17:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 17:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">返回雷克雅維克</div>
                 <div class="tl-desc">沿原路返回市區，或繞道 Kerið 火山口湖（入場約 400 ISK）。</div>
                 <div class="tl-tags"><span class="tl-tag">🌋 火山口湖</span></div>
