--- a/day3.html
+++ b/day3.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 08:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 08:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%BA%E7%99%BC%E5%89%8D%E5%BE%80%E5%8D%97%E6%B5%B7%E5%B2%B8%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">出發前往南海岸</div>
                 <div class="tl-desc">離開雷克雅維克，沿一號公路向南前進。今天將一路向東，沿途有冰島最美的瀑布群。</div>
                 <div class="tl-tags"><span class="tl-tag">🛤️ 一號公路</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 10:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 10:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%A1%9E%E9%87%8C%E9%9B%85%E8%98%AD%E7%80%91%E5%B8%83%20Seljalandsfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">塞里雅蘭瀑布 Seljalandsfoss</div>
                 <div class="tl-desc">60 公尺高的瀑布，最特別的是可以繞到瀑布後方！穿防水衣是必須的。旁邊還有隱藏瀑布 Gljúfrabúi。</div>
                 <div class="tl-tags"><span class="tl-tag">🌊 水簾洞</span><span class="tl-tag">📸 隱藏瀑布</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 12:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 12:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%96%AF%E7%A7%91%E5%8A%A0%E7%80%91%E5%B8%83%20Sk%C3%B3gafoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">斯科加瀑布 Skógafoss</div>
                 <div class="tl-desc">寬 25 公尺、落差 60 公尺的壯觀瀑布。可爬 527 階樓梯到頂端俯瞰。瀑布前經常出現彩虹。</div>
                 <div class="tl-tags"><span class="tl-tag">🌈 彩虹瀑布</span><span class="tl-tag">🥾 527階</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍽️ 14:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🍽️ 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">午餐</div>
                 <div class="tl-desc">在 Skógafoss 旁的餐廳或 Skógar 民俗博物館咖啡廳用餐。</div>
                 <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span></div>
@@ -98,7 +110,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 15:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 15:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Dyrh%C3%B3laey%20%E6%B5%B7%E5%B2%AC%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Dyrhólaey 海岬</div>
                 <div class="tl-desc">壯觀的岩石拱門與懸崖。8 月份是觀賞 Puffin 海鸚的好時機！從頂端可遠眺黑沙灘全景。</div>
                 <div class="tl-tags"><span class="tl-tag">🐧 Puffin</span><span class="tl-tag">🏖️ 黑沙灘</span></div>
@@ -111,7 +126,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 17:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🏨 17:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E7%B6%AD%E5%85%8B%20V%C3%ADk%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">抵達維克 Vík</div>
                 <div class="tl-desc">入住維克小鎮住宿，冰島最南端的村莊。</div>
                 <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
