--- a/day4.html
+++ b/day4.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 09:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Reynisfjara%20%E9%BB%91%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Reynisfjara 黑沙灘</div>
                 <div class="tl-desc">世界著名的黑色火山沙灘，配上整齊的玄武岩柱（Reynisdrangar）。注意：浪非常大且危險，絕對不要背對海！</div>
                 <div class="tl-tags"><span class="tl-tag">🏖️ 黑沙灘</span><span class="tl-tag">⚠️ 危險浪</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 11:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 11:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%B6%AD%E5%85%8B%E6%95%99%E5%A0%82%E8%A7%80%E6%99%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">維克教堂觀景</div>
                 <div class="tl-desc">爬上維克小鎮紅頂教堂旁的山丘，俯瞰整個小鎮與黑沙灘全景。</div>
                 <div class="tl-tags"><span class="tl-tag">⛪ 教堂</span><span class="tl-tag">📸 全景</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 12:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 12:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Skaftafell%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往 Skaftafell</div>
                 <div class="tl-desc">沿一號公路向東，穿越壯觀的沙漠般熔岩沙地（Eldhraun 苔蘚熔岩地）。午餐路上解決。</div>
                 <div class="tl-tags"><span class="tl-tag">🛤️ 公路風景</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 14:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 14:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Skaftafell%20%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Skaftafell 國家公園</div>
                 <div class="tl-desc">Vatnajökull 國家公園的一部分。推薦走 Svartifoss（黑瀑布）步道，約 1.5 小時來回，可欣賞獨特的玄武岩柱瀑布。</div>
                 <div class="tl-tags"><span class="tl-tag">🥾 健行</span><span class="tl-tag">🌊 黑瀑布</span></div>
@@ -98,7 +110,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 17:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🏨 17:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E5%86%B0%E6%B2%B3%E6%B9%96%E9%99%84%E8%BF%91%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">抵達冰河湖附近住宿</div>
                 <div class="tl-desc">Check-in 並在住宿附近享用晚餐或自煮。</div>
                 <div class="tl-tags"><span class="tl-tag">🏨 住宿</span></div>
