--- a/day5.html
+++ b/day5.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 09:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=J%C3%B6kuls%C3%A1rl%C3%B3n%20%E5%86%B0%E6%B2%B3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Jökulsárlón 冰河湖</div>
                 <div class="tl-desc">冰島最著名的景點之一！漂浮著藍色冰山的冰河湖。可搭乘水陸兩棲船 (Amphibian Boat Tour) 深入冰山之間。</div>
                 <div class="tl-tags"><span class="tl-tag">🧊 冰山</span><span class="tl-tag">🚤 遊船</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 11:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 11:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%91%BD%E7%9F%B3%E6%B2%99%E7%81%98%20Diamond%20Beach%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">鑽石沙灘 Diamond Beach</div>
                 <div class="tl-desc">冰河湖對面的黑沙灘，散落著被海浪沖上岸的透明冰塊，在陽光下如鑽石般閃耀。攝影天堂！</div>
                 <div class="tl-tags"><span class="tl-tag">💎 鑽石沙灘</span><span class="tl-tag">📸 攝影</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🥾 13:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🥾 13:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%86%B0%E5%B7%9D%E5%81%A5%E8%A1%8C%20(%E9%A0%90%E7%B4%84)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">冰川健行 (預約)</div>
                 <div class="tl-desc">參加 Vatnajökull 冰川健行導覽團（約 3 小時），穿上冰爪行走在歐洲最大冰川上。需提前預約。</div>
                 <div class="tl-tags"><span class="tl-tag">🧗 冰川健行</span><span class="tl-tag">⛏️ 冰爪</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 17:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 17:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E6%9D%B1%E9%83%A8%E5%B3%BD%E7%81%A3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往東部峽灣</div>
                 <div class="tl-desc">開始向東北方前進，進入東部峽灣地區。沿途風景逐漸從冰川轉為峽灣。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
@@ -98,7 +110,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 19:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🏨 19:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%9D%B1%E9%83%A8%E5%B3%BD%E7%81%A3%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">東部峽灣住宿</div>
                 <div class="tl-desc">在 Djúpivogur 或 Höfn 小鎮入住。推薦品嘗當地著名的冰島龍蝦 (Langoustine)。</div>
                 <div class="tl-tags"><span class="tl-tag">🦞 龍蝦</span><span class="tl-tag">🏨 住宿</span></div>
