--- a/day6.html
+++ b/day6.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 09:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%9D%B1%E9%83%A8%E5%B3%BD%E7%81%A3%E6%99%AF%E8%A7%80%E5%85%AC%E8%B7%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">東部峽灣景觀公路</div>
                 <div class="tl-desc">沿海岸線蜿蜒前行，經過一個又一個寧靜的峽灣。沿途可能遇見野生馴鹿！</div>
                 <div class="tl-tags"><span class="tl-tag">🦌 馴鹿</span><span class="tl-tag">🛤️ 峽灣公路</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 11:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 11:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=F%C3%A1skr%C3%BA%C3%B0sfj%C3%B6r%C3%B0ur%20%E6%B3%95%E5%9C%8B%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Fáskrúðsfjörður 法國小鎮</div>
                 <div class="tl-desc">這個小鎮曾是法國漁民的基地，街道雙語標示（冰島文/法文）。有法國漁民博物館。</div>
                 <div class="tl-tags"><span class="tl-tag">🇫🇷 法國風情</span><span class="tl-tag">🏘️ 漁村</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 13:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 13:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Rey%C3%B0arfj%C3%B6r%C3%B0ur%20%26%20%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Reyðarfjörður & 午餐</div>
                 <div class="tl-desc">在東峽灣最大的峽灣小鎮用餐休息。有二戰博物館可參觀。</div>
                 <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span><span class="tl-tag">🏛️ 博物館</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 15:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Egilssta%C3%B0ir%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往 Egilsstaðir</div>
                 <div class="tl-desc">前往東部最大城鎮。途中可繞道 Lagarfljót 湖（傳說中有水怪！）。</div>
                 <div class="tl-tags"><span class="tl-tag">🐉 水怪傳說</span><span class="tl-tag">🚗 自駕</span></div>
@@ -98,7 +110,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 17:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🏨 17:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Egilssta%C3%B0ir%20%E5%85%A5%E4%BD%8F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Egilsstaðir 入住</div>
                 <div class="tl-desc">在東部首府整頓休息，補給超市物資。</div>
                 <div class="tl-tags"><span class="tl-tag">🏨 住宿</span><span class="tl-tag">🛒 補給</span></div>
