--- a/day7.html
+++ b/day7.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 08:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 08:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Stu%C3%B0lagil%20%E5%B3%BD%E8%B0%B7%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往 Stuðlagil 峽谷</div>
                 <div class="tl-desc">冰島最壯觀的玄武岩柱峽谷！需從主路繞道約 30 分鐘。沿溪谷步行約 40 分鐘抵達。</div>
                 <div class="tl-tags"><span class="tl-tag">🏔️ 峽谷</span><span class="tl-tag">📸 網紅景點</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 12:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 12:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%BB%9B%E6%8F%90%E7%80%91%E5%B8%83%20Dettifoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">黛提瀑布 Dettifoss</div>
                 <div class="tl-desc">歐洲最強大的瀑布！水量驚人，每秒 500 立方公尺。從東岸 (862 號公路) 或西岸 (864 號公路) 都能觀賞。</div>
                 <div class="tl-tags"><span class="tl-tag">🌊 最強瀑布</span><span class="tl-tag">💨 水霧</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 13:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 13:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Selfoss%20%E7%80%91%E5%B8%83%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Selfoss 瀑布</div>
                 <div class="tl-desc">Dettifoss 上游約 1 公里的另一座瀑布，寬廣而優雅，遊客較少。</div>
                 <div class="tl-tags"><span class="tl-tag">🌊 瀑布</span><span class="tl-tag">🥾 步行</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 15:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E7%B1%B3%E6%B9%96%20M%C3%BDvatn%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往米湖 Mývatn</div>
                 <div class="tl-desc">沿一號公路前往米湖區域。抵達後先在住宿放行李。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
@@ -98,7 +110,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">♨️ 17:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">♨️ 17:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%B1%B3%E6%B9%96%E8%87%AA%E7%84%B6%E6%BA%AB%E6%B3%89%20M%C3%BDvatn%20Nature%20Baths%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">米湖自然溫泉 Mývatn Nature Baths</div>
                 <div class="tl-desc">被稱為「北方的藍湖」，但人少很多！在蒸氣籠罩的溫泉中放鬆，欣賞米湖景色。</div>
                 <div class="tl-tags"><span class="tl-tag">♨️ 溫泉</span><span class="tl-tag">🌅 夕陽</span></div>
