--- a/day8.html
+++ b/day8.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 09:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Hverir%20%E5%9C%B0%E7%86%B1%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Hverir 地熱區</div>
                 <div class="tl-desc">硫磺蒸氣噴口與沸泥池形成的外星地表。注意不要離開步道！地面溫度可達 100°C。</div>
                 <div class="tl-tags"><span class="tl-tag">🌋 地熱</span><span class="tl-tag">⚠️ 高溫</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 10:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 10:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Krafla%20%E7%81%AB%E5%B1%B1%E5%8F%A3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Krafla 火山口</div>
                 <div class="tl-desc">Víti 火山口湖呈現夢幻的藍綠色。周圍是 Krafla 火山地熱系統。</div>
                 <div class="tl-tags"><span class="tl-tag">🌋 火山口</span><span class="tl-tag">💧 翠綠湖</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 12:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 12:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Dimmuborgir%20%E6%9A%97%E9%BB%91%E5%9F%8E%E5%A0%A1%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Dimmuborgir 暗黑城堡</div>
                 <div class="tl-desc">奇特的熔岩迷宮，被稱為「黑暗城堡」。傳說是冰島聖誕老人（Yule Lads）的家。步道輕鬆。</div>
                 <div class="tl-tags"><span class="tl-tag">🏰 熔岩迷宮</span><span class="tl-tag">🎅 聖誕傳說</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍽️ 13:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🍽️ 13:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%8D%88%E9%A4%90%20%E2%80%94%20Vogafj%C3%B3s%20%E8%BE%B2%E5%A0%B4%E9%A4%90%E5%BB%B3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">午餐 — Vogafjós 農場餐廳</div>
                 <div class="tl-desc">在牧場餐廳享用道地冰島食物，可以透過玻璃窗看到隔壁的乳牛！推薦自製起司與冰島麵包。</div>
                 <div class="tl-tags"><span class="tl-tag">🍽️ 農場餐廳</span><span class="tl-tag">🧀 起司</span></div>
@@ -98,7 +110,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 15:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Grj%C3%B3tagj%C3%A1%20%E6%BA%AB%E6%B3%89%E6%B4%9E%E7%A9%B4%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">Grjótagjá 溫泉洞穴</div>
                 <div class="tl-desc">隱藏在熔岩裂縫中的地下溫泉（權力遊戲拍攝地之一）。目前禁止入水，但可參觀。</div>
                 <div class="tl-tags"><span class="tl-tag">🎬 權力遊戲</span><span class="tl-tag">🕳️ 洞穴</span></div>
@@ -111,7 +126,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 16:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 16:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%B1%B3%E6%B9%96%E6%B9%96%E7%95%94%E6%95%A3%E6%AD%A5%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">米湖湖畔散步</div>
                 <div class="tl-desc">沿湖畔步道享受寧靜的湖光山色。觀察各種水鳥。</div>
                 <div class="tl-tags"><span class="tl-tag">🦆 水鳥</span><span class="tl-tag">🚶 散步</span></div>
