--- a/day9.html
+++ b/day9.html
@@ -46,7 +46,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 08:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 08:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E8%83%A1%E8%96%A9%E7%B6%AD%E5%85%8B%20H%C3%BAsav%C3%ADk%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">前往胡薩維克 Húsavík</div>
                 <div class="tl-desc">從米湖前往歐洲賞鯨之都胡薩維克，車程約 50 分鐘。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
@@ -59,7 +62,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🐋 10:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🐋 10:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%B3%9E%E9%AF%A8%E5%87%BA%E6%B5%B7%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">賞鯨出海</div>
                 <div class="tl-desc">搭乘傳統橡木船出海賞鯨（約 3 小時）。8 月常見座頭鯨、小鬚鯨，有時甚至能看到藍鯨！</div>
                 <div class="tl-tags"><span class="tl-tag">🐋 賞鯨</span><span class="tl-tag">🚢 出海</span></div>
@@ -72,7 +78,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍽️ 13:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🍽️ 13:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%8D%88%E9%A4%90%20%E2%80%94%20Gamli%20Baukur%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">午餐 — Gamli Baukur</div>
                 <div class="tl-desc">港口邊的餐廳，新鮮海鮮料理。推薦鯨魚觀察配啤酒。</div>
                 <div class="tl-tags"><span class="tl-tag">🍽️ 海鮮</span><span class="tl-tag">🍺 啤酒</span></div>
@@ -85,7 +94,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 14:30</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 14:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%83%A1%E8%96%A9%E7%B6%AD%E5%85%8B%E9%AF%A8%E9%AD%9A%E5%8D%9A%E7%89%A9%E9%A4%A8%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">胡薩維克鯨魚博物館</div>
                 <div class="tl-desc">北歐最棒的鯨魚博物館，有完整的鯨魚骨架展示。互動展覽適合各年齡。</div>
                 <div class="tl-tags"><span class="tl-tag">🏛️ 博物館</span><span class="tl-tag">🐋 鯨魚</span></div>
@@ -98,7 +110,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 16:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 16:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%9C%BE%E7%A5%9E%E7%80%91%E5%B8%83%20Go%C3%B0afoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">眾神瀑布 Goðafoss</div>
                 <div class="tl-desc">回程路上經過「眾神瀑布」，寬 30 公尺、高 12 公尺。傳說冰島改信基督教時，異教神像被拋入此瀑布。</div>
                 <div class="tl-tags"><span class="tl-tag">🌊 眾神瀑布</span><span class="tl-tag">📖 傳說</span></div>
@@ -111,7 +126,10 @@
                 
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 18:00</div>
+                <div class="tl-time-row">
+                    <div class="tl-time">🏨 18:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E9%98%BF%E5%85%8B%E9%9B%B7%E9%87%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
                 <div class="tl-title">抵達阿克雷里</div>
                 <div class="tl-desc">入住北部首都阿克雷里的住宿。</div>
                 <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
